# paranoid-openvpn

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/: FUNDING.yml
src/paranoid_openvpn/: cli.py  input_handlers.py  main.py  profile_parser.py  types.py
tests/: test_cli.py  test_input_handlers.py  test_main.py  test_profile_parsers.py
